--- a/style.css
+++ b/style.css
@@ -47,7 +47,12 @@ body {
 }
 
 .hero {
-  background-color: #2f303a;
+  background-image: linear-gradient(
+      rgba(47, 48, 58, 0.4),
+      rgba(47, 48, 58, 0.4)
+    ),
+    url(img/hero.jpg);
+
   color: #ffffff;
   text-align: center;
   padding: 200px 0;
@@ -68,8 +73,14 @@ body {
   justify-content: space-between;
   display: flex;
 }
-.item-photo :not(:last-child) {
-  margin-right: 30px;
+
+.item-photo {
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 0px 0px 4px 4px;
+}
+.item-photo .img {
+  display: block;
 }
 .team {
   background-color: #f5f4fa;
@@ -78,10 +89,17 @@ body {
 }
 .team-ul {
   text-align: center;
+  margin-right: 30px;
 }
+/* .team-ul:not(:last-child) {
+  margin-right: 30px;
+} */
 .headline-text-team {
   text-align: center;
   margin-bottom: 50px;
+}
+.item-photo :not(:last-child) {
+  margin-right: 30px;
 }
 
 footer {
