--- a/style.css
+++ b/style.css
@@ -73,7 +73,9 @@ body {
   justify-content: space-between;
   display: flex;
 }
-
+.photo-container:not(:last-child) {
+  margin-right: 30px;
+}
 .item-photo {
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
@@ -89,17 +91,13 @@ body {
 }
 .team-ul {
   text-align: center;
+}
+.item-photo:not(:last-child) {
   margin-right: 30px;
 }
-/* .team-ul:not(:last-child) {
-  margin-right: 30px;
-} */
 .headline-text-team {
   text-align: center;
   margin-bottom: 50px;
-}
-.item-photo :not(:last-child) {
-  margin-right: 30px;
 }
 
 footer {
